macros/core/tests/snapshots/service__gservice_works_for_lifetimes_and_generics.snap
---
source: macros/core/tests/service.rs
expression: result
---
impl<'a, 'b, T, TEventTrigger> SomeService<'a, 'b, T, TEventTrigger>
where
    T: Clone,
    TEventTrigger: EventTrigger<events::SomeEvents>,
{
    pub fn do_this(&mut self) -> u32 {
        42
    }
}
pub struct Exposure<T> {
    message_id: sails_rtl::MessageId,
    route: &'static [u8],
    inner: T,
}
impl<'a, 'b, T, TEventTrigger> Exposure<SomeService<'a, 'b, T, TEventTrigger>>
where
    T: Clone,
    TEventTrigger: EventTrigger<events::SomeEvents>,
{
    pub fn do_this(&mut self) -> u32 {
        let exposure_scope = sails_rtl::gstd::services::ExposureCallScope::new(self);
        self.inner.do_this()
    }
    pub async fn handle(&mut self, mut input: &[u8]) -> Vec<u8> {
        if input.starts_with(&[24u8, 68u8, 111u8, 84u8, 104u8, 105u8, 115u8]) {
            let output = self.__do_this(&input[7usize..]).await;
            static INVOCATION_ROUTE: [u8; 7usize] = [
                24u8,
                68u8,
                111u8,
                84u8,
                104u8,
                105u8,
                115u8,
            ];
            return [INVOCATION_ROUTE.as_ref(), &output].concat();
        }
        let invocation_path = String::decode(&mut input)
            .expect("Failed to decode invocation path");
        panic!("Unknown request: {}", invocation_path);
    }
    async fn __do_this(&mut self, mut input: &[u8]) -> Vec<u8> {
        let request = __DoThisParams::decode(&mut input)
            .expect("Failed to decode request");
        let result = self.do_this();
        return result.encode();
    }
}
impl<'a, 'b, T, TEventTrigger> sails_rtl::gstd::services::Exposure
for Exposure<SomeService<'a, 'b, T, TEventTrigger>>
where
    T: Clone,
    TEventTrigger: EventTrigger<events::SomeEvents>,
{
    fn message_id(&self) -> sails_rtl::MessageId {
        self.message_id
    }
    fn route(&self) -> &'static [u8] {
        self.route
    }
}
impl<'a, 'b, T, TEventTrigger> sails_rtl::gstd::services::Service
for SomeService<'a, 'b, T, TEventTrigger>
where
    T: Clone,
    TEventTrigger: EventTrigger<events::SomeEvents>,
{
    type Exposure = Exposure<SomeService<'a, 'b, T, TEventTrigger>>;
    fn expose(
        self,
        message_id: sails_rtl::MessageId,
        route: &'static [u8],
    ) -> Self::Exposure {
        Self::Exposure {
            message_id,
            route,
            inner: self,
        }
    }
}
impl<'a, 'b, T, TEventTrigger> sails_rtl::meta::ServiceMeta
for SomeService<'a, 'b, T, TEventTrigger>
where
    T: Clone,
    TEventTrigger: EventTrigger<events::SomeEvents>,
{
    fn commands() -> scale_info::MetaType {
        scale_info::MetaType::new::<meta::CommandsMeta>()
    }
    fn queries() -> scale_info::MetaType {
        scale_info::MetaType::new::<meta::QueriesMeta>()
    }
    fn events() -> scale_info::MetaType {
        scale_info::MetaType::new::<meta::EventsMeta>()
    }
}
#[derive(Decode, TypeInfo)]
pub struct __DoThisParams {}
mod meta {
    use super::*;
    #[derive(TypeInfo)]
    pub enum CommandsMeta {
        DoThis(__DoThisParams, u32),
    }
    #[derive(TypeInfo)]
    pub enum QueriesMeta {}
    #[derive(TypeInfo)]
    pub enum NoEvents {}
    pub type EventsMeta = events::SomeEvents;
}
